syntax = "proto3";

package zksync.config.proof_data_handler;

enum ProtocolVersionLoadingMode {
  FROM_DB = 0;
  FROM_ENV_VAR = 1;
}

message ProofDataHandler {
  optional uint32 http_port = 1; // required; u16
  optional uint32 proof_generation_timeout_in_secs = 2; // required; s
}
